dependencies/gles/source/gles/gl2.d

else
{
    GLint glGetUniformLocation (GLuint program, GLchar* name);
}
void glGetVertexAttribfv (GLuint index, GLenum pname, GLfloat* params);
void glGetVertexAttribiv (GLuint index, GLenum pname, GLint* params);
void glGetVertexAttribPointerv (GLuint index, GLenum pname, void** pointer);
void glHint (GLenum target, GLenum mode);
GLboolean glIsBuffer (GLuint buffer);
GLboolean glIsEnabled (GLenum cap);
GLboolean glIsFramebuffer (GLuint framebuffer);
GLboolean glIsProgram (GLuint program);
GLboolean glIsRenderbuffer (GLuint renderbuffer);
GLboolean glIsShader (GLuint shader);
GLboolean glIsTexture (GLuint texture);
void glLineWidth (GLfloat width);
void glLinkProgram (GLuint program);
void glPixelStorei (GLenum pname, GLint param);
void glPolygonOffset (GLfloat factor, GLfloat units);
void glReadPixels (GLint x, GLint y, GLsizei width, GLsizei height, GLenum format, GLenum type, void* pixels);
void glReleaseShaderCompiler ();
void glRenderbufferStorage (GLenum target, GLenum internalformat, GLsizei width, GLsizei height);
void glSampleCoverage (GLfloat value, GLboolean invert);
void glScissor (GLint x, GLint y, GLsizei width, GLsizei height);
void glShaderBinary (GLsizei count, GLuint* shaders, GLenum binaryformat, void* binary, GLsizei length);
version(WebAssembly)
{
    void wglShaderSource (GLuint shader, GLchar* string_, GLint length);
    void glShaderSource (GLuint shader, GLsizei count, GLchar** string, GLint* length)
    {
        assert(count == 1, "Can't pass more than one string to WebGL glShaderSource.");
        GLint sourceSize = 0;
        GLchar* str = *string;
        if(length != null)
            sourceSize = *length;
        else
        {
            while(str[sourceSize++] != '\0'){}
            sourceSize--;
        }
        //Null character ending is not accepted on firefox.
        wglShaderSource(shader, str, sourceSize);
    }
}
else
{
    void glShaderSource (GLuint shader, GLsizei count, GLchar** string, GLint* length);
}
void glStencilFunc (GLenum func, GLint ref_, GLuint mask);
void glStencilFuncSeparate (GLenum face, GLenum func, GLint ref_, GLuint mask);
void glStencilMask (GLuint mask);
void glStencilMaskSeparate (GLenum face, GLuint mask);
void glStencilOp (GLenum fail, GLenum zfail, GLenum zpass);
void glStencilOpSeparate (GLenum face, GLenum sfail, GLenum dpfail, GLenum dppass);
void glTexImage2D (GLenum target, GLint level, GLint internalformat, GLsizei width, GLsizei height, GLint border, GLenum format, GLenum type, void* pixels);
void glTexParameterf (GLenum target, GLenum pname, GLfloat param);
void glTexParameterfv (GLenum target, GLenum pname, GLfloat* params);
void glTexParameteri (GLenum target, GLenum pname, GLint param);
void glTexParameteriv (GLenum target, GLenum pname, GLint* params);
void glTexSubImage2D (GLenum target, GLint level, GLint xoffset, GLint yoffset, GLsizei width, GLsizei height, GLenum format, GLenum type, void* pixels);
void glUniform1f (GLint location, GLfloat v0);
void glUniform1fv (GLint location, GLsizei count, GLfloat* value);
void glUniform1i (GLint location, GLint v0);
void glUniform1iv (GLint location, GLsizei count, GLint* value);
void glUniform2f (GLint location, GLfloat v0, GLfloat v1);
void glUniform2fv (GLint location, GLsizei count, GLfloat* value);
void glUniform2i (GLint location, GLint v0, GLint v1);
void glUniform2iv (GLint location, GLsizei count, GLint* value);
void glUniform3f (GLint location, GLfloat v0, GLfloat v1, GLfloat v2);
void glUniform3fv (GLint location, GLsizei count, GLfloat* value);
void glUniform3i (GLint location, GLint v0, GLint v1, GLint v2);
void glUniform3iv (GLint location, GLsizei count, GLint* value);
void glUniform4f (GLint location, GLfloat v0, GLfloat v1, GLfloat v2, GLfloat v3);
void glUniform4fv (GLint location, GLsizei count, GLfloat* value);
void glUniform4i (GLint location, GLint v0, GLint v1, GLint v2, GLint v3);
void glUniform4iv (GLint location, GLsizei count, GLint* value);
void glUniformMatrix2fv (GLint location, GLsizei count, GLboolean transpose, GLfloat* value);
void glUniformMatrix3fv (GLint location, GLsizei count, GLboolean transpose, GLfloat* value);
void glUniformMatrix4fv (GLint location, GLsizei count, GLboolean transpose, GLfloat* value);
void glUseProgram (GLuint program);
void glValidateProgram (GLuint program);
void glVertexAttrib1f (GLuint index, GLfloat x);
void glVertexAttrib1fv (GLuint index, GLfloat* v);
void glVertexAttrib2f (GLuint index, GLfloat x, GLfloat y);
void glVertexAttrib2fv (GLuint index, GLfloat* v);
void glVertexAttrib3f (GLuint index, GLfloat x, GLfloat y, GLfloat z);
void glVertexAttrib3fv (GLuint index, GLfloat* v);
void glVertexAttrib4f (GLuint index, GLfloat x, GLfloat y, GLfloat z, GLfloat w);
void glVertexAttrib4fv (GLuint index, GLfloat* v);
void glVertexAttribPointer (GLuint index, GLint size, GLenum type, GLboolean normalized, GLsizei stride, void* pointer);
void glViewport (GLint x, GLint y, GLsizei width, GLsizei height);

/* GL_ES_VERSION_2_0 */

